--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,10 @@
-VITE_URL=http://localhost:5000
+VITE_URL=https://for-deploy-fd71.onrender.com
+VITE_URL_LOCAL=http://localhost:3000
+VITE_FIREBASE_API_KEY=AIzaSyB1wk6CXB-eK4fH73G8ZoVx7zp5IL7MJOE
+VITE_FIREBASE_AUTH_DOMAIN=my-collage-project-c238e.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=my-collage-project-c238e
+VITE_FIREBASE_STORAGE_BUCKET=my-collage-project-c238e.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=275997520721
+VITE_FIREBASE_APP_ID=1:275997520721:web:c5dc0f7fb75d61f9cbd970
+VITE_FIREBASE_MEASUREMENT_ID=G-V91H93EH7N
+
